[~] Adding contact card and resizing it

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h4 class="job">IT Developer</h4>
                     <img src="img/pp.jpg" class="pp">
                     <h2 style="margin: 28% 0 10% 40%; font-weight: bold">Simon Riembault</h2>
-                <p class="textAboutMe">My name is Simon, I live in France and I'm 18 years old. I'm currently studying in first year at <a href="https://www.epitech.eu/en/" style="color: black; text-decoration: underline; ;" target="_blank">Epitech Technology</a>. My goal is to discover, learn and master in order to propose services for any programming project!</p>
+                <p class="textAboutMe">My name is Simon, I live in France and I'm 18 years old. I'm currently studying in first year at <a href="https://www.epitech.eu/en/" style="color: black; text-decoration: underline; ;" target="_blank">Epitech Technology</a>. My goal is to discover, learn and master in order to propose services for any programming projects!</p>
                 </div>
             </div>
             <div class="cardAboutMe">
@@ -81,7 +81,12 @@
             </div>-->
         </div>
         <div class="cardContact" id="cardContact">
-            <p></p>
+            <div class="contact" id="contact">
+                <img src="img/epitech.png" class="epitech">
+                <a class="contact-text"><a href="https://linkedin.com/in/simon-riembault" target="_blank" class="contact-text"><img src="img/linkedIn.png" class="logo-contactL"></a></a>
+                <a class="contact-text"><a href="https://github.com/SimonRmblt" class="contact-text" target="_blank"><img src="img/github.png" class="logo-contactG"></a></a>
+                <a class="contact-text"><a href="mailto:contact@simonriembault.eu" target="_blank" class="contact-text"><img src="img/mail-logo.png" class="logo-contactM"></a></a>
+            </div>
         </div>
     </div>
     <script src="animation.js"></script>
